<resources>
    <string name="app_name">MyNote</string>
    <string name="list_job">Job list</string>
    <string name="text_edit_job">Edit job</string>
    <string name="type_job_name">Type job name</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add_job">Add job</string>
    <string name="add">Add</string>
    <string name="text_job_name">Job name</string>
    <string name="please_type_job_name">Please  type job name</string>
    <string name="added_new_job">Added new job</string>
    <string name="updated_job">Updated job!</string>
    <string name="deleted_job">Deleted job</string>
    <string name="exclamation_mark">!</string>
    <string name="do_you_want_delete_this_job">Do you want to delete [%s]?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
