<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textSuaCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_edit_job"
        android:textAlignment="center"
        android:textColor="#ff00"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTenCVEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSuaCV"
        android:layout_marginTop="20dp"
        android:hint="@string/type_job_name"
        android:textSize="@dimen/font_size_14" />

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTenCVEdit"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTenCVEdit"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_14" />

        <Button
            android:id="@+id/buttonHuyEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTenCVEdit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/buttonXacNhan"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_14" />

    </LinearLayout>
</RelativeLayout>